[tool.poetry]
name = "versup"
version = "1.5.3"
description = "Version up your project with ease."
authors = ["Sven Steinbauer <sven@unlogic.co.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/unlogic/versup"

[tool.poetry.dependencies]
python = "^3.6 || ^3.7"
gitpython = "^3.0"
click = "^7.0"
semver = "^2.8, <3"
colorama = "^0.4.3"


[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
pytest = "^3.0"
sphinx = "^3.0.0"
sphinx_rtd_theme = "^0.4.3"
coveralls = "^2.0.0"
black = "^20.8b1"
coverage = "^5.5"
flake8 = "^3.9.2"
mypy = "^0.901"
types-click = "^0.1.14"

[tool.poetry.scripts]
versup = "versup.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

