[tool.poetry]
name = "versup"
version = "1.5.7"
description = "Version up your project with ease."
authors = ["Sven Steinbauer <sven@unlogic.co.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Svenito/versup"

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1"
click = "^8.0"
semver = "^2.13, <3"
colorama = "^0.4.6"
setuptools = "^65.5.3"


[tool.poetry.dev-dependencies]
pytest-cov = "^4.0"
pytest = "^7.2"
sphinx = "^5.3.0"
sphinx_rtd_theme = "^0.4.3"
coveralls = "^3.3.1"
black = "^22.10.0"
coverage = "^6.5"
flake8 = "^5.0.4"
mypy = "^0.982"
types-click = "^7.1.8"

[tool.poetry.scripts]
versup = "versup.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

