[project]
name = "versup"
version = "1.6.4"
description = "Version up your project with ease."
readme = "README.md"
requires-python = ">=3.8"
authors=[{name="Sven Steinbauer", email="sven@unlogic.co.uk"}]
license={ file = "LICENSE.txt" }
dependencies = [
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "rich>=13.9.3",
    "semver>=3.0.2",
]

[project.scripts]
versup = "versup.__main__:main"

[project.urls]
repository = "https://github.com/Svenito/versup"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "coveralls>=4.0.1",
    "flake8>=5.0.4",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.1",
    "types-click>=7.1.8",
    "isort>=5.13.2",
    "ruff>=0.7.1",
]
package = true

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
